--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "mock-api": "json-server --watch mock-data/schools.json --port 3000",
     "serve:ssr:Zeraki-Task": "node dist/zeraki-task/server/server.mjs"
   },
   "private": true,
@@ -23,8 +24,10 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.7",
+    "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "express": "^4.18.2",
+    "json-server": "^1.0.0-beta.0",
     "ng2-charts": "^6.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
